@@ -40,7 +40,11 @@
 
   Version 5.1.0  2012-09-
   ------------------------------------------------------------------------------
-    - added fragmentation percentage display to all the interfaces
+    - added fragmentation level display to all the interfaces
+    - added ability to skip the disk processing when fragmentation level
+      is below than specified (fragmentation_threshold option in GUI;
+      UD_FRAGMENTATION_THRESHOLD environment variable in command line tool
+      and boot time interface)
     - added settings for file pattern groups to easier exclude or include
       groups of files (fixes issue #3449331)
     - bug fix: filters forced to be case insensitive for all the characters
